opam-version: "1.2"
version: "2.0.0"
maintainer: "Andre Nathan <andre@hostnet.com.br>"
authors: ["Andre Nathan <andre@hostnet.com.br>"]
license: "MIT"
homepage: "https://github.com/andrenth/ocaml-spf"
dev-repo: "https://github.com/andrenth/ocaml-spf.git"
bug-reports: "https://github.com/andrenth/ocaml-spf/issues"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
]
depexts: [
  [["debian"] ["libspf2-dev"]]
  [["ubuntu"] ["libspf2-dev"]]
]
